# chatbot

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: test.yml
chatbot/: anthropic_client.py  app.py  chat_manager.py
tests/: test_anthropic_client.py  test_chat_manager.py
